Fri May 28 10:40:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (checking_for): ignore toplevel.

Fri May 28 00:47:16 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* error.c (rb_bug): suppress the error report dialog if report_bug() 
	  is finished successfly.

Thu May 27 23:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/encoding.h (rb_filesystem_encindex): defined.

	* include/ruby/encoding.h (rb_locale_encindex): ditto.

	* encoding.c (rb_filesystem_encindex): remove static.

	* encoding.c (rb_locale_encindex): ditto.

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_home_dir): set filesystem encoding.

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): set encoding as the same of fname
	  when _result_ is not filesystem encoding. [ruby-dev:41429]

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): use rb_enc_associate_index and
	  rb_filesystem_encindex. Strings related FileSystem should
	  have filesystem_encoding.

	* file.c (SET_EXTERNAL_ENCODING): removed.

Thu May 27 22:39:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): call ReadFile() with len = 0 before
	  reading really on console, because the first ReadFile() call after
	  PeekConsoleInput() always returns broken data. (Windows's bug).
	  [ruby-core:29018]

Wed May 26 20:19:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): add the result of random to the
	  beginning of range, not the opposite.  [ruby-dev:41415]

Wed May 26 19:55:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_expand_path): revert a part of r22392. it's commit miss.

Wed May 26 12:08:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): subtraction method of non-numeric can
	  return Float.  [ruby-dev:41410]

Wed May 26 10:35:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
